# Configurador_Paineis_Eletricos

./: .coveragerc  .env.example  .gitattributes  .gitignore  Arquivo_para_criar_PR_teste  Nginx.txt  README.md  _sonar_analyze.py  issues1.json  issues2.json  manage.py  sonar-project copy.properties  sonar-project.properties
.github/: pull_request_template.md
backend/: .coveragerc  conftest.py  coverage-allapps.xml  coverage-full.xml  coverage-multi.xml  entrypoint.backend.sh  entrypoint.scheduler.sh  pytest.ini  requirements.txt
docs/: README.md  backlog.md  checklist-testes.md
frontend/: .dockerignore  .env.development  .env.example  .env.production  .env.remote  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
infra/: entrypoint.backend.sh
scripts/: README.md  bash.ps1  createsuperuser.ps1  (+17 more)
tools/fiscal_ponte/: .env.example  .gitignore  HOMOLOGACAO.md  PRODUCAO.md  README.md  pyproject.toml  requirements.txt
tools/fiscal_ponte/fiscal_ponte/: __init__.py  __main__.py  api_client.py  cli.py  config.py  homolog.py  http_retry.py  logging_setup.py  manifestacao_worker.py  service_loop.py  setup_check.py  sync_cycle.py
tools/fiscal_ponte/fiscal_ponte/sefaz/: __init__.py  acbr_manifestacao.py  acbr_monitor.py  acbr_response.py  acbr_tcp.py  base.py  factory.py  folder.py  stub.py
tools/fiscal_ponte/homolog/fixtures/: sample_nfe_homolog.xml
tools/fiscal_ponte/tests/: test_acbr_manifestacao.py  test_acbr_response.py  test_http_retry.py  test_setup_check.py  test_sync_cycle.py
(+2215 files in other folders)
