[project]
name = "fiscal-ponte-zfw"
version = "0.1.0"
description = "Agente local ponte fiscal ZFW (certificado A3 + API Django)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0,<1",
  "python-dotenv>=1.0.0,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
fiscal-ponte = "fiscal_ponte.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["fiscal_ponte*"]
